--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru-Ru">
-
+    <head>
+        <meta charset="utf-8">
+        <title>first-project</title>
+    </head>
+    <body>
+        Hello world!
+    </body>
 </html>
